--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Ping Pong JS</h1>
     <canvas id="canvas"></canvas>
-    <script src="js/main.js"></script>
+    <script src="js/main.js">
+    </script>
 </body>
 </html>
